[gd_scene load_steps=12 format=3 uid="uid://bomberenemy001"]

[ext_resource type="Script" path="res://Enemy/enemy_bomber.gd" id="1_bomber"]
[ext_resource type="Texture2D" uid="uid://bb2tqmla8xdg8" path="res://Textures/Enemy/kolbold_weak.png" id="2_sprite"]
[ext_resource type="PackedScene" uid="uid://xy3cvpwdy828" path="res://Utility/hurt_box.tscn" id="3_hurtbox"]
[ext_resource type="PackedScene" uid="uid://uhr6mtuisqm1" path="res://Utility/hit_box.tscn" id="4_hitbox"]
[ext_resource type="AudioStream" uid="uid://bi7t7cjthnhhc" path="res://Audio/SoundEffect/enemy_hit.ogg" id="5_audio"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bomber"]
radius = 4.0
height = 12.0

[sub_resource type="Animation" id="Animation_reset"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_walk"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bomber"]
_data = {
&"RESET": SubResource("Animation_reset"),
&"walk": SubResource("Animation_walk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hurt"]
size = Vector2(16, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hit"]
size = Vector2(12, 14)

[node name="enemy_bomber" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_bomber")
movement_speed = 35.0
hp = 12
knockback_recovery = 3.0
experience = 4
enemy_damage = 3
explosion_damage = 5
explosion_radius = 60.0
enemy_type = "bomber"

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.6, 0.4, 1)
scale = Vector2(1.6, 1.6)
texture = ExtResource("2_sprite")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_bomber")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bomber")
}

[node name="HurtBox" parent="." instance=ExtResource("3_hurtbox")]
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_hurt")

[node name="HitBox" parent="." instance=ExtResource("4_hitbox")]
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_hit")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_audio")
volume_db = -20.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
